# OpenChatAgent

./: .dev_pids  .env.example  .gitignore  API_COMPARISON_REPORT.md  DEVELOPMENT_STATUS.md  PORT_CONFIGURATION.md  README.md  README_CHAT_UI.md  debug-mysql.js  debug-user-query.js  ecosystem.config.js  fix_websocket_ai.py  package.json  pnpm-lock.yaml  start-dev.bat  start-dev.sh  start-pm2.sh  test-all-apis.js  test-fixes.js  test-handover.sh  test-login-api.js  test_admin_api.py  test_ai_service.py  test_websocket.py  转人工功能实现说明.md
Docs/: ADMIN_API_COMPLETION_REPORT.md  ARCHITECTURE_MIGRATION.md  AUTH_SETUP_COMPLETE.md  CHAT_ADMIN_API_DESIGN.md  CHAT_ADMIN_API_IMPLEMENTATION.md  CHAT_ADMIN_DATABASE_DESIGN.md  CONVERSATIONS_PAGE_COMPONENT_FIX.md  CONVERSATIONS_PAGE_FIX.md  DEVELOP_GUIDE.md  DEVELOP_README.md  DEVELOP_TODO.md  LOGIN_ERROR_HANDLING_FIX.md  PROJECT_OVERVIEW.md  QUICK_FIX_GUIDE.md  README_WEBSOCKET.md  README_cn.md  README_en.md  SOLUTION_SUMMARY.md  TODO_MVP_ROADMAP.md  TODO_ai-service.md  TODO_chat-admin.md  TODO_chat-client.md  TODO_chat-core.md  TODO_chat-session.md  TODO_chat-ui.md  TROUBLESHOOTING.md  USAGE.md  WEBSOCKET_DEBUG_GUIDE.md  WEBSOCKET_MODULE_DESIGN.md  WEBSOCKET_SOLUTION.md  WHITE_SCREEN_FIX.md  chat-admin-migration.md
ai-service/: .env.example  README.md  example.js  package-lock.json  package.json
ai-service/src/: index.js  server.js
ai-service/src/client/: DashScopeClient.js  index.js
ai-service/src/utils/: context.js  formatter.js
ai-service/tests/: client.test.js  module.test.js
ai-service/tests/utils/: context.test.js  formatter.test.js
chat-admin/: .env.base  .env.dev  README.md  create-test-user.py  frontend-package.json  nohup.out  package.json  pnpm-lock.yaml  server.js  start-dev.sh  test-login.sh  test-me.sh  功能测试指南.md  问题修复报告.md  项目完成状态.md
chat-admin/config/: database.js
chat-admin/controllers/: authController.js
chat-admin/database/: schema.sql
chat-admin/middleware/: auth.js
chat-admin/models/: User.js
chat-admin/routes/: auth.js
chat-admin/scripts/: seed-conversations.js
chat-admin/services/: authService.js
chat-admin/src/: permission.ts
chat-admin/src/axios/: config.ts  service.ts
chat-admin/src/composables/: useAdminWebSocket.ts
chat-admin/src/controllers/: conversationController.js  customerController.js  permissionController.js  reportController.js  tagController.js  userController.js
chat-admin/src/locales/: zh-CN.ts
chat-admin/src/router/: index.ts
chat-admin/src/routes/: conversations.js  customers.js  permissions.js  reports.js  tags.js  users.js
chat-admin/src/services/: conversations.js  customers.js  permissions.js  reports.js  tags.js  users.js
chat-admin/src/utils/: date.ts  websocket.ts
chat-api/: .env.example  COMPLETION_REPORT.md  Dockerfile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  test_api.py
chat-api/deploy/: docker-compose.prod.yml
chat-api/deploy/nginx/: nginx.conf
chat-api/docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  MIGRATION.md  README.md
chat-api/scripts/: __init__.py  init_db.py  migrate.py
chat-api/src/: main.py
chat-api/src/ai/: __init__.py  client.py  service.py
chat-api/src/api/: __init__.py  admin.py  auth.py  chat.py  conversations.py  deps.py  router.py  users.py
chat-api/src/config/: settings.py
chat-api/src/core/: database.py  exceptions.py  redis.py
chat-api/src/middleware/: __init__.py  auth.py  logging.py  rate_limit.py  security.py
chat-api/src/models/: __init__.py  base.py  conversation.py  message.py  session.py  user.py
chat-api/src/schemas/: conversation.py  user.py
chat-api/src/services/: __init__.py  conversation.py  message.py  user.py
chat-api/src/session/: __init__.py  manager.py  service.py
chat-api/src/utils/: __init__.py  health.py  metrics.py
chat-api/src/websocket/: __init__.py  manager.py  router.py
chat-api/tests/: __init__.py  conftest.py  test_auth.py
chat-core/: .env.example  COMPLETION_REPORT.md  logger.js  package.json
chat-core/src/: index.js  logger.js
chat-core/src/config/: websocket.js
chat-core/src/middleware/: auth.js  error.js  validation.js
chat-core/src/routes/: feedback.js  index.js  messages.js  sessions.js  websocketHealth.js
chat-core/tests/: basic.test.js  module.test.js
chat-front/: BUGFIX_SUMMARY.md  README.md  STREAMING_CHAT_README.md  index.html  package.json  tsconfig.json  vite.config.ts
chat-front/src/: App.tsx  index.css  main.tsx
chat-session/: .env.example  README.md  example.js  package-lock.json  package.json
chat-session/src/: index.js  server.js
chat-session/tests/: cleanup.test.js  module.test.js
chat-ui/: .env.example  BACKEND_REQUIREMENTS.md  BUGFIX_REPORT.md  FIXES-SUMMARY.md  HTML_NESTING_FIX_REPORT.md  IMPLEMENTATION_STATUS.md  PERFORMANCE_AND_MARKDOWN_FIX_REPORT.md  PROJECT_STATUS.md  QUEUE_ISSUE_FIX_REPORT.md  README.md  STREAMING_COMPONENTS_README.md  STREAMING_FIX_FINAL.md  STREAMING_FIX_REPORT.md  STREAMING_PROPERTY_FIX_REPORT.md  STREAMING_SOLUTION_REPORT.md  STREAMING_TYPEWRITER_FIX_REPORT.md  UI_IMPROVEMENTS_SUMMARY.md  debug-streaming.html  index.html  package.json  test-streaming-simple.html  test-streaming.html  verify-fix.js  vite.config.js
chat-ui-backup/: .env.example  .gitignore  package.json  vite.config.js
chat-ui-backup/src/: App.jsx
chat-ui/docs/: ChatUI-Usage-Guide.md
chat-ui/src/: App.css  App.jsx  index.css  main.jsx
database/: schema.sql
scripts/: check-status.sh  cli.js  init-chat-admin.sh  kill-dev.sh  monitor.js  setup-env.js  stop-dev.sh  sync-env.js
utils/: websocket-debugger.js
websocket-module/: INTEGRATION_GUIDE.md  README.md  index.js  jest.config.js  package.json
websocket-module/core/: ConnectionPool.js  EventBus.js  MessageProcessor.js  WebSocketManager.js
websocket-module/examples/: basic-usage.js
websocket-module/handlers/: AuthHandler.js
websocket-module/middleware/: validation.js
websocket-module/plugins/: monitoring.js
websocket-module/test/: setup.js  websocket-manager.test.js
(+174 files in other folders)
